--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jsdom": "^20.0.0",
     "next": "12.2.5",
+    "node-fetch": "^3.2.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.8",
+    "@types/react": "^18.0.17",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
   }
