--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsdom": "^20.0.0",
     "next": "12.2.5",
     "node-fetch": "^3.2.10",
+    "onoff": "^6.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "^4.7.4"
