--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "onoff": "^6.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
