--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gpio": "ts-node ./gpio.ts"
   },
   "dependencies": {
     "jsdom": "^20.0.0",
