--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gpio": "ts-node ./gpio.ts"
+    "gpio": "ts-node gpio.js"
   },
   "dependencies": {
     "jsdom": "^20.0.0",
